# notify_app

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.deploy/: Dockerfile  docker-compose.yml  gunicorn.conf.py
backend/src/: logging_utils.py
backend/src/entrypoints/: execute.py  notify_asgi.py
backend/src/notify/: app.py
backend/src/notify/clients/: turmo_sms_client.py
backend/src/notify/extensions/: db.py
nginx/: Dockerfile  default.conf
src/entrypoints/: celery_app.py  execute.py  notify_asgi.py  telegram_bot.py
src/notify/: app.py  config.py
src/notify/adapters/models/: base.py  message.py  message_billing.py  notify.py  telegram_connection_request.py  telegram_repair_request.py  telegram_user.py  user.py  user_billing.py
src/notify/adapters/queries/: billing_messages_query.py  notify_query.py  telegram_connection_request_query.py  telegram_repair_request_query.py  telegram_user_query.py  user_query.py  users_billing_query.py  users_query.py
src/notify/adapters/repos/: base.py  billing_messages_repo.py  exceptions.py  message_repo.py  notify_repo.py  telegram_connection_request_repo.py  telegram_notify_repo.py  telegram_repair_request_repo.py  telegram_user_repo.py  turbo_sms_repo.py  user_biilling_repo.py  user_repo.py
src/notify/adapters/services/: base.py  notify_service.py  (+2 more)
src/notify/api/: exception_handling.py
src/notify/clients/: telegram_client.py  turmo_sms_client.py
src/notify/extensions/: db.py
src/notify/taskapp/: app.py  service_manager.py
src/notify/telegram_bot/: app.py
(+53 files in other folders)
